--- a/app/src/main/res/layout/activity_sdcard_information.xml
+++ b/app/src/main/res/layout/activity_sdcard_information.xml
@@ -28,6 +28,7 @@
         android:layout_above="@+id/sdcard_info_layout"
         android:layout_alignParentStart="true"
         android:layout_marginStart="@dimen/title_margin_top"
+        android:textSize="14sp"
         android:text="@string/sdcard_info_title"
         android:textColor="@color/white" />
 
@@ -68,6 +69,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dip"
+                    android:textSize="18sp"
                     android:text=""
                     android:textColor="@color/white" />
             </LinearLayout>
@@ -93,6 +95,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dip"
                     android:text=""
+                    android:textSize="18sp"
                     android:textColor="@color/white" />
             </LinearLayout>
 
@@ -126,6 +129,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dip"
                     android:text=""
+                    android:textSize="18sp"
                     android:textColor="@color/white" />
             </LinearLayout>
 
