--- a/app/src/main/res/layout/activity_set_wizard.xml
+++ b/app/src/main/res/layout/activity_set_wizard.xml
@@ -13,6 +13,7 @@
         android:layout_centerInParent="true"
         android:layout_gravity="center"
         android:layout_weight="1"
+        android:textSize="14sp"
         android:gravity="center"
         android:text="TextView"
         android:textColor="@color/white" />
