--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,9 @@
     <color name="text_color">#666666</color>
     <color name="white">#ffffff</color>
     <color name="color_66cc66">#3366cc66</color>
+    <color name="color_05a610">#05a610</color>
     <color name="color_00ffffff">#00ffffff</color>
     <color name="color_ffff33">#ffff33</color>
     <color name="text_color_black">#000000</color>
+    <color name="color_ffffff">#ffffff</color>
 </resources>
