--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -8,6 +8,8 @@
     <dimen name="brightness_height">70dp</dimen>
     <dimen name="brightness_margin">5dp</dimen>
     <dimen name="date_time_margin">30dp</dimen>
+    <dimen name="emergency_title_width">248dp</dimen>
+    <dimen name="emergency_title_height">50dp</dimen>
 
     <dimen name="leveler_detail_title_margin_top">10dp</dimen>
     <dimen name="title_margin_top">30dp</dimen>
@@ -17,9 +19,11 @@
 
     <dimen name="dialog_inquiries">70dp</dimen>
 
-    <dimen name="title_size">24sp</dimen>
+    <dimen name="title_size">20sp</dimen>
+    <dimen name="dialog_content_size">18sp</dimen>
     <dimen name="content_size">16sp</dimen>
     <dimen name="time_size">30sp</dimen>
     <dimen name="gps_status_title_top">20dip</dimen>
+    <dimen name="emergency_title_size">14sp</dimen>
 
 </resources>
