--- a/app/src/main/res/layout/activity_system_installation_leveler.xml
+++ b/app/src/main/res/layout/activity_system_installation_leveler.xml
@@ -38,13 +38,14 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:paddingStart="10dp"
-        android:textSize="16sp"
+        android:textSize="12sp"
         android:layout_alignParentBottom="true"
         android:textColor="@android:color/holo_blue_light"
         android:ellipsize="marquee"
         android:singleLine="true"
         android:marqueeRepeatLimit="marquee_forever"
         android:background="@drawable/bg_menu_main_description"
+        android:gravity="center"
         />
 
 </RelativeLayout>
