--- a/app/src/main/res/values-en/arrays.xml
+++ b/app/src/main/res/values-en/arrays.xml
@@ -176,7 +176,8 @@
     </string-array>
 
     <string-array name="service_information">
-        <item>Inquiries</item>
+        <item>Notification list</item>
+        <item>Help Desk</item>
     </string-array>
 
     <string-array name="user_list">
