--- a/app/src/main/res/values-ja-rJP/arrays.xml
+++ b/app/src/main/res/values-ja-rJP/arrays.xml
@@ -171,6 +171,7 @@
     </string-array>
 
     <string-array name="service_information">
+        <item>お知らせ一覧</item>
         <item>お問合せ先</item>
     </string-array>
 
