--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -10,6 +10,8 @@
     <dimen name="date_time_margin">30dp</dimen>
     <dimen name="emergency_title_width">248dp</dimen>
     <dimen name="emergency_title_height">50dp</dimen>
+    <dimen name="help_title_height">42dp</dimen>
+    <dimen name="help_content_height">119dp</dimen>
 
     <dimen name="leveler_detail_title_margin_top">10dp</dimen>
     <dimen name="title_margin_top">30dp</dimen>
@@ -19,7 +21,7 @@
     <dimen name="gps_status_padding_top">10dp</dimen>
     <dimen name="gps_status_padding_left">3dp</dimen>
 
-    <dimen name="dialog_inquiries">70dp</dimen>
+    <dimen name="dialog_inquiries">17dp</dimen>
 
     <dimen name="title_size">20sp</dimen>
     <dimen name="dialog_content_size">18sp</dimen>
@@ -27,5 +29,6 @@
     <dimen name="time_size">30sp</dimen>
     <dimen name="gps_status_title_top">20dip</dimen>
     <dimen name="emergency_title_size">14sp</dimen>
+    <dimen name="inquiries_background_info_size">12sp</dimen>
 
 </resources>
