删除“報知音音量”中多余的“音”字

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -112,7 +112,7 @@
     </string-array>
 
     <string-array name="system_setting">
-        <item>報知音音量</item>
+        <item>報知音量</item>
         <item>再生音量</item>
         <item>映像確認</item>
         <item>映像確認（リアカメラ）</item>
