修改弹出风格

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="color_ffff33">#ffff33</color>
     <color name="text_color_black">#000000</color>
     <color name="color_ffffff">#ffffff</color>
+    <color name="color_FF000000">#FF000000</color>
 </resources>
