fix up PUCDR-1302 [Menu] After Long press 0.5/1 sec Menu/OK key, DUT still executing 項目確定 function.

--- a/app/src/main/res/layout/activity_recording_time.xml
+++ b/app/src/main/res/layout/activity_recording_time.xml
@@ -22,7 +22,7 @@
             android:textColor="@android:color/background_light"
             android:textSize="24sp" />
 
-        <ListView
+        <com.askey.dvr.cdr7010.setting.widget.MyListView
             android:id="@+id/list_view"
             android:layout_width="250dp"
             android:layout_height="match_parent" />
