--- a/app/src/main/res/layout/activity_notification_setting.xml
+++ b/app/src/main/res/layout/activity_notification_setting.xml
@@ -24,7 +24,7 @@
             android:singleLine="true"
             />
 
-        <ListView
+        <com.askey.dvr.cdr7010.setting.widget.MyListView
             android:id="@+id/list_view"
             android:layout_width="250dp"
             android:layout_height="match_parent" />
