--- a/app/src/main/res/layout/second_menu_layout.xml
+++ b/app/src/main/res/layout/second_menu_layout.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
-        <ListView
+        <com.askey.dvr.cdr7010.setting.widget.MyListView
             android:id="@+id/list_view"
             android:layout_width="250dp"
             android:layout_height="wrap_content" />
