--- a/app/src/main/res/layout/activity_set_wizard.xml
+++ b/app/src/main/res/layout/activity_set_wizard.xml
@@ -2,22 +2,30 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_menu_main"
     android:layout_gravity="center"
+    android:background="@drawable/bg_menu_main"
     android:gravity="center">
+
+    <include
+        android:id="@+id/leveler_detail_title"
+        layout="@layout/title_layout" />
 
     <TextView
         android:id="@+id/set_wizard_help_context"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_centerInParent="true"
-        android:layout_gravity="center"
-        android:layout_weight="1"
-        android:textSize="14sp"
+        android:layout_marginLeft="@dimen/view_margin_top"
+        android:layout_marginRight="@dimen/title_margin_top"
+        android:layout_marginTop="@dimen/view_margin_top"
+        android:background="@drawable/bg_level_adjustment"
         android:gravity="center"
+        android:paddingBottom="@dimen/view_margin_top"
+        android:paddingTop="@dimen/view_margin_top"
         android:text="TextView"
-        android:textColor="@color/white" />
-
+        android:textColor="@color/white"
+        android:textSize="14sp" />
 
     <include
         layout="@layout/right_button_layout"
