--- a/app/src/main/res/layout/activity_leveler_detail.xml
+++ b/app/src/main/res/layout/activity_leveler_detail.xml
@@ -17,17 +17,16 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="@dimen/view_margin_top"
-        android:layout_marginRight="@dimen/title_margin_top"
-        android:paddingTop="@dimen/view_margin_top"
-        android:paddingBottom="@dimen/view_margin_top"
+        android:layout_marginStart="@dimen/view_margin_top"
+        android:layout_marginEnd="@dimen/title_margin_top"
+        android:padding="@dimen/view_margin_top"
         android:background="@drawable/bg_level_adjustment"
+        android:gravity="center_vertical"
         android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/view_margin_top"
             android:text="@string/leveler_detail_context1"
             android:textColor="@color/white" />
 
