--- a/app/src/main/res/layout/activity_set_wizard.xml
+++ b/app/src/main/res/layout/activity_set_wizard.xml
@@ -16,13 +16,12 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_centerInParent="true"
-        android:layout_marginLeft="@dimen/view_margin_top"
-        android:layout_marginRight="@dimen/title_margin_top"
+        android:layout_marginStart="@dimen/view_margin_top"
+        android:layout_marginEnd="@dimen/title_margin_top"
         android:layout_marginTop="@dimen/view_margin_top"
         android:background="@drawable/bg_level_adjustment"
-        android:gravity="center"
-        android:paddingBottom="@dimen/view_margin_top"
-        android:paddingTop="@dimen/view_margin_top"
+        android:gravity="center_vertical"
+        android:padding="@dimen/view_margin_top"
         android:text="TextView"
         android:textColor="@color/white"
         android:textSize="14sp" />
