--- a/app/src/main/res/layout/dialog_comm.xml
+++ b/app/src/main/res/layout/dialog_comm.xml
@@ -1,39 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@drawable/dialog_sdcard_bg">
 
     <com.askey.dvr.cdr7010.setting.widget.MarqueeTextView
         android:id="@+id/content"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_height="0dp"
+        android:layout_weight="5"
+        android:layout_gravity="center"
         android:ellipsize="marquee"
         android:marqueeRepeatLimit="marquee_forever"
         android:scrollHorizontally="true"
         android:singleLine="true"
         android:focusableInTouchMode="true"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:layout_marginTop="15dp"
+        />
     <RelativeLayout
         android:id="@+id/double_layout"
-        android:layout_below="@id/content"
-        android:layout_centerVertical="true"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:layout_weight="3"
+        >
         <Button
             android:id="@+id/ib_cancle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
             android:background="@drawable/dialog_btn_selector"/>
         <Button
             android:id="@+id/ib_ok"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/ib_cancle"
+            android:layout_toEndOf="@id/ib_cancle"
             android:background="@drawable/dialog_btn_selector"/>
     </RelativeLayout>
 
-</RelativeLayout>
+</LinearLayout>
