--- a/app/src/main/res/layout/activity_system_installation_leveler.xml
+++ b/app/src/main/res/layout/activity_system_installation_leveler.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <SurfaceView
@@ -33,7 +34,7 @@
         android:layout_alignParentEnd="true"
         />
 
-    <com.askey.dvr.cdr7010.setting.widget.MarqueeTextView
+    <com.askey.dvr.cdr7010.setting.widget.JVCMarqueeTextView
         android:id="@+id/marquee_text"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
@@ -41,11 +42,11 @@
         android:textSize="12sp"
         android:layout_alignParentBottom="true"
         android:textColor="@android:color/holo_blue_light"
-        android:ellipsize="marquee"
-        android:singleLine="true"
-        android:marqueeRepeatLimit="marquee_forever"
         android:background="@drawable/bg_menu_main_description"
-        android:gravity="center"
+        android:paddingTop="5dp"
+        app:scroll_first_delay="2000"
+        app:scroll_mode="mode_forever"
+        app:scroll_interval="8000"
         />
 
 </RelativeLayout>
