--- a/app/src/main/res/layout/comm_dialog_no_button.xml
+++ b/app/src/main/res/layout/comm_dialog_no_button.xml
@@ -1,40 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/dialog_sdcard_bg"
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_centerInParent="true"
+        android:orientation="vertical">
 
-        >
         <ImageView
             android:id="@+id/icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:src="@mipmap/ic_launcher_round"
-            />
+            android:src="@mipmap/ic_launcher_round" />
 
         <com.askey.dvr.cdr7010.setting.widget.JVCMarqueeTextView
             android:id="@+id/content"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
-            android:textSize="20sp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:textColor="@android:color/black"
+            android:textSize="20sp"
             app:scroll_first_delay="2000"
             app:scroll_interval="6000"
-            app:scroll_mode="mode_forever"
-            />
+            app:scroll_mode="mode_forever" />
     </LinearLayout>
 
 </RelativeLayout>
