--- a/app/src/main/res/layout/activity_leveler_detail.xml
+++ b/app/src/main/res/layout/activity_leveler_detail.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_horizontal"
-    android:gravity="center_horizontal"
     android:background="@drawable/bg_menu_main"
+    android:gravity="center_horizontal"
     android:orientation="vertical">
 
     <include
@@ -17,32 +16,19 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:layout_marginStart="@dimen/view_margin_top"
         android:layout_marginEnd="@dimen/title_margin_top"
-        android:padding="@dimen/view_margin_top"
+        android:layout_marginStart="@dimen/view_margin_top"
         android:background="@drawable/bg_level_adjustment"
         android:gravity="center_vertical"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="@dimen/view_margin_top">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/leveler_detail_context1"
+            android:text="@string/set_wizard_help_context_vehicle_type"
             android:textColor="@color/white" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/view_margin_top"
-            android:text="@string/leveler_detail_context2"
-            android:textColor="@color/white" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/view_margin_top"
-            android:text="@string/leveler_detail_context3"
-            android:textColor="@color/white" />
     </LinearLayout>
 
     <include
